--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,4 +72,4 @@ target_link_libraries(10_multiple_lights ${GL_LIBS})
 if(BUILD_ASSIMP)
     add_executable(11_model_loading 11_model_loading.cpp camera.h shader.h model.h mesh.h stb_image.h)
     target_link_libraries(11_model_loading ${GL_LIBS})
-endif(if(BUILD_ASSIMP))
+endif(BUILD_ASSIMP)
